--- a/Assignment 4.2
+++ b/Assignment 4.2
@@ -1,1 +1,32 @@
+#include<iostream>
+using namespace std;
+class construct
+{
+public:
+float area;
+construct()
+{
+area=0;
+}
+construct(int a,int b)
+{
+area=a*b;
+}
+void disp()
+{
+cout<< area<<endl;
+}
+};
+int main()
+{
+   cout << "Name  : Sakshi Dattatray Patil\n";
+   cout << "Roll No: 97\n";
+   cout << "Class : S.Y CSE (B)\n";
+construct o;
+construct o2(10,20);
+o.disp();
+o2.disp();
+return 1;
+}
+    
 
